# megfile

./: .buildinfo  .coverage.workspace.9794.447496  .coverage.workspace.9816.491529  .coverage.workspace.9819.854338  .gitignore  .pyre_configuration  .readthedocs.yml  CHANGELOG.md  CHNAGELOG.md  CONTRIBUTROS  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  advanced.custom_protocol.html  advanced.html  benchmark.html  changelog.html  cli.html  configuration.html  generate_code.py  genindex.html  index.html  megfile.fs.html  megfile.fs_path.html  megfile.hdfs.html  megfile.hdfs_path.html  megfile.html  megfile.http.html  megfile.http_path.html  megfile.s3.html  megfile.s3_path.html  megfile.sftp.html  megfile.sftp_path.html  megfile.smart.html  megfile.smart_path.html  megfile.stdio.html  megfile.stdio_path.html  megfile.webdav_path.html  (+18 more)
.doctrees/: advanced.doctree  benchmark.doctree  changelog.doctree  cli.doctree  configuration.doctree  environment.pickle  index.doctree  megfile.doctree  megfile.fs.doctree  megfile.fs_path.doctree  megfile.hdfs.doctree  megfile.hdfs_path.doctree  megfile.http.doctree  megfile.http_path.doctree  megfile.s3.doctree  megfile.s3_path.doctree  megfile.sftp.doctree  megfile.sftp_path.doctree  megfile.smart.doctree  megfile.smart_path.doctree  megfile.stdio.doctree  megfile.stdio_path.doctree  megfile.webdav_path.doctree  path_format.doctree  readme.doctree  speed_test.doctree
.doctrees/advanced/: custom_protocol.doctree  glob.doctree
.doctrees/configuration/: common.doctree  completion.doctree  hdfs.doctree  http.doctree  s3.doctree  sftp.doctree  webdav.doctree
.github/: codecov.yml
.github/workflows/: auto-approve.yml  autoapproveci.yml  on-push.yaml  publish-docs.yml  run-tests.yml
_modules/: index.html
_modules/megfile/: fs.html  fs_path.html  hdfs.html  hdfs_path.html  http.html  http_path.html  pathlike.html  s3.html  s3_path.html  sftp.html  sftp_path.html  smart.html  smart_path.html  stdio.html  stdio_path.html
_sources/: advanced.rst.txt  benchmark.md.txt  changelog.rst.txt  configuration.rst.txt  index.rst.txt  megfile.fs_path.rst.txt  megfile.hdfs.rst.txt  megfile.hdfs_path.rst.txt  megfile.http.rst.txt  megfile.http_path.rst.txt  megfile.rst.txt  megfile.s3.rst.txt  megfile.s3_path.rst.txt  megfile.sftp_path.rst.txt  megfile.smart.rst.txt  megfile.stdio.rst.txt  megfile.stdio_path.rst.txt  megfile.webdav_path.rst.txt  path_format.rst.txt  speed_test.md.txt
_sources/advanced/: custom_protocol.md.txt  glob.md.txt
_sources/configuration/: common.md.txt  hdfs.md.txt  s3.md.txt  sftp.md.txt
advanced/: custom_protocol.html  glob.html
configuration/: common.html  completion.html  hdfs.html  http.html  s3.html  sftp.html  webdav.html
docs/: Makefile  advanced.rst  benchmark.md  cli.rst  conf.py  configuration.rst  index.rst  megfile.fs.rst  megfile.fs_path.rst  megfile.hdfs.rst  megfile.hdfs_path.rst  megfile.http.rst  megfile.http_path.rst  megfile.rst  megfile.s3.rst  megfile.s3_path.rst  megfile.sftp.rst  megfile.sftp_path.rst  megfile.smart.rst  megfile.smart_path.rst  megfile.stdio_path.rst  path_format.md  readme.rst  requirements.txt  speed_test.md
docs/advanced/: custom_protocol.md  glob.md
docs/configuration/: common.md  completion.md  hdfs.md  http.md  s3.md  sftp.md
megfile/: __init__.py  cli.py  config.py  errors.py  fs.py  fs_path.py  fsspec.py  hdfs.py  hdfs_path.py  hf_path.py  http.py  http_path.py  interfaces.py  pathlike.py  s3.py  s3_path.py  sftp.py  sftp2.py  sftp2_path.py  sftp_path.py  smart.py  smart_path.py  stdio.py  stdio_path.py  utils.py  version.py  webdav.py  webdav_path.py
megfile/lib/: _fakefs.py  base_memory_handler.py  base_multipart_writer.py  base_prefetch_reader.py  combine_reader.py  compare.py  compat.py  fakefs.py  fnmatch.py  get_image_size.py  glob.py  hdfs_prefetch_reader.py  hdfs_tools.py  http_prefetch_reader.py  joinpath.py  lazy_handler.py  s3_buffered_writer.py  s3_cached_handler.py  s3_limited_seekable_writer.py  s3_memory_handler.py  s3_multipart_writer.py  s3_pipe_handler.py  s3_prefetch_reader.py  s3_share_cache_reader.py  shadow_handler.py  stdio_handler.py  url.py  webdav_memory_handler.py  webdav_prefetch_reader.py
megfile/utils/: __init__.py  atomic.py  endpoint.py  mutex.py
references/: cli.md  megfile.smart.md  megfile.smart_path.md
references/configuration/: s3.md  webdav.md
scripts/: convert_results_to_sarif.py  generate_file.py  gererate_newest_release_note.py  print_pyre_errors_by_file.py
scripts/skill/: generate_skill_by_markdown.py
scripts/speed_tests/: tar.py
template/: doc.json  doc.yaml  smart.py  smart_bak.py
tests/: __init__.py  s3_utils.py  test_cli.py  test_compat.py  test_config.py  test_errors.py  test_fs.py  test_fs_path.py  test_fs_purepath.py  test_hdfs.py  test_hdfs_path.py  test_http.py  test_http_path.py  test_http_purepath.py  test_interfaces.py  test_pathlike.py  test_s3.py  test_s3_fast_list.py  test_s3_path.py  test_s3_purepath.py  test_sftp.py  test_sftp2.py  test_sftp2_path.py  test_sftp_path.py  test_smart.py  test_smart_path.py  test_smart_purepath.py  test_stdio.py  test_utils.py  test_webdav.py  test_webdav_path.py
tests/compat/: fs.py  hdfs.py  http.py  s3.py  sftp.py  sftp2.py  stdio.py  webdav.py
tests/lib/: test_combine_reader.py  test_compat.py  test_dir_tree.py  test_fakefs.py  test_fnmatch.py  test_get_image_size.py  test_glob.py  test_http_prefetch_reader.py  test_joinpath.py  test_lazy_handler.py  test_s3_buffered_writer.py  test_s3_cached_handler.py  (+9 more)
(+30 files in other folders)
